<resources>
    <string name="app_name">GoNow</string>
    <string name="iniciar_sesion">Ya tengo cuenta</string>
    <string name="registrarme">Registrarme</string>
    <string name="inicio_sinCuenta">Necesito ir al baño, ¡ya!</string>
    <string name="Bienvenida">Bienvenido a</string>
    <string name="info1Pantalla1">Los mejores WC cerca de tí.</string>
    <string name="info2Pantalla1">Acceder rápido y sin cuenta.</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="olvidoContraseña">He olvidado mi contraseña</string>
    <string name="preguntaCuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesión">Iniciar sesión</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="repite_la_contrasena">Repite la contraseña</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo!</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="correo_de_recuperacion">Correo de recuperación</string>
    <string name="enviar">Enviar</string>
    <string name="volver">Volver</string>
    <string name="buscar">Buscar...</string>
    <string name="nombre">Nombre</string>
    <string name="unisex">Unisex</string>
    <string name="gratis">Gratis</string>
    <string name="a_adir_horario">Añadir horario</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="total_de_ba_os_puntuados">Total de baños puntuados:</string>
    <string name="cambiar_correo">Cambiar correo</string>
    <string name="ayuda">Ayuda</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="elige_el_tipo_de_ubicaci_n">Elige el tipo de ubicación</string>
    <string name="bar">Bar</string>
    <string name="tienda">Tienda</string>
    <string name="restaurante">Restaurante</string>
    <string name="gasolinera">Gasolinera</string>
    <string name="otro">Otro</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="banio">Baño</string>
    <string name="mis_banios">Mis baños</string>
    <string name="default_web_client_id">673531485692-m71iguu4orj4geh0u6rvtob8mph0iqok.apps.googleusercontent.com</string>
    <string name="distancia">Distancia:</string>
    <string name="horario">Horario aproximado</string>
    <string name="puntuar_ba_o">Puntuar baño</string>
    <string name="reg_strate">Regístrate</string>
    <string name="quiere_tener_acceso_completo">¿Quiere tener acceso completo?</string>
    <string name="registrate_o_inicia_sesi_n">Registrate o inicia sesión</string>
    <string name="como_llegar">Como llegar</string>
    <string name="guardar">Guardar</string>
    <string name="calificar">Calificar</string>
    <string name="total_de_ba_os_creados">Total de baños creados:</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="publicar">Publicar</string>
    <string name="contrase_a_antigua">Contraseña antigua</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="correo_nuevo">Correo nuevo</string>
    <string name="filtros">Filtros</string>
    <string name="discapacitados">Discapacitados</string>
    <string name="borrar_filtros">Borrar filtros</string>
    <string name="abierto_24_7">Abierto 24/7</string>
    <string name="notienehorario">No tiene horario</string>
    <string name="tiene_horario">Tiene horario</string>
    <string name="comentarioHoras">Horas aproximadas en las que esta abierto el baño.</string>
    <string name="actualizar">Actualizar</string>
    <string name="mensajeConfirmacion1">¿Estás seguro de que quieres salir?</string>
    <string name="mensajeConfirmacion2">Se perderá la información no guardada.</string>
    <string name="publicacion_exitosa">¡Publicado con éxito!</string>
    <string name="publicandomensaje">Publicando...</string>
    <string name="ubicacion_no_obtenida">No se pudo obtener la ubicación</string>
    <string name="tiempo_carga_agotado">La conexión está tardando demasiado. Revisa tu red o vuelve a intentarlo.</string>
    <string name="siguiendo_usuario">Siguiendo al usuario</string>
    <string name="modo_libre">Modo libre</string>
    <string name="nombre_no_disponible">Nombre no disponible</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="no_disponible">No disponible</string>
    <string name="googlenoinstalado">Google Maps no instalado</string>
    <string name="bienvenido_con_correo">Bienvenido, %1$s</string>
    <string name="correo_no_valido">Correo no válido</string>
    <string name="contrasena_vacia">Contraseña vacía</string>
    <string name="completar_campos">Por favor, complete todos los campos correctamente.</string>
    <string name="cerrarsesion">¿Seguro que quieres cerrar sesión?</string>
    <string name="borrar">Borrar</string>
    <string name="cuenta_eliminada">Cuenta eliminada correctamente.</string>
    <string name="seguridad_eliminar">Por seguridad, por favor cierra sesión y vuelve a iniciar para borrar tu cuenta.</string>
    <string name="permisocamaradenegado">Permiso de cámara denegado</string>
    <string name="debescalificar">Debes calificar</string>
    <string name="puntuacionactualizadabien">Puntuación del baño actualizada correctamente</string>
    <string name="calificacionenviada">Calificación enviada</string>
    <string name="contraseñaactualizada">Contraseña actualizada correctamente.</string>
    <string name="error_revisar_contrasena">Error, revisa la contraseña</string>
    <string name="error_contrasena_corta">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="mensaje_restablecer_contrasena">Se enviará un correo para restablecer la contraseña a %1$s</string>
    <string name="mensaje_por_defecto">Mensaje por defecto</string>
    <string name="confirmar_borrado">¿Seguro que quieres borrar tu cuenta?</string>
    <string name="boton_borrar">BORRAR</string>
    <string name="boton_cancelar">CANCELAR</string>
    <string name="dar_permisos">Dar permisos</string>
    <string name="textopermisos">Para ayudarte a encontrar baños cercanos 🚻📍\nnecesitamos tu ubicación precisa.\n\n¡Es rápido, seguro y mejora tu experiencia al máximo! 😉</string>
    <string name="permisos_porfavor">Permisos porfavor</string>
    <string name="actualizadobien">Se ha actualizado</string>
    <string name="confirmar_borrar_banio">¿Seguro que quieres borrar este baño?</string>
    <string name="error_borrar_banio">Error al borrar el baño</string>
    <string name="error_borrar_resenas">Error al borrar las reseñas</string>
    <string name="error_buscar_resenas">Error al buscar reseñas</string>
    <string name="id_no_disponible">ID de documento no disponible</string>
    <string name="verificate">Verificate</string>
    <string name="mensaje_verificacion">¡Gracias por registrarte! 🎉\n\nTe hemos enviado un correo de verificación a tu dirección de email.\n\nRevisa tu bandeja de entrada (y también la carpeta de spam) y haz clic en el enlace para verificar tu cuenta.\n\nUna vez verificado, podrás acceder a todas las funciones de la app 🚀</string>
    <string name="correo_enviado">Correo enviado</string>
    <string name="no_se_han_encontrado_baños">No se han encontrado baños</string>
    <string name="location_dialog_title">Ubicación activa</string>
    <string name="location_dialog_message">La ubicación está desactivada</string>
    <string name="location_dialog_ok">Aceptar</string>
    <string name="location_dialog_cancel">Cancelar</string>
    <string name="titulo_contribucion">Contribuye a nuestra comunidad</string>
    <string name="comentario_contribucion">¡Contribuye creando baños para la comunidad!\nAyuda a otros a encontrar lugares limpios y accesibles cerca de ti.</string>
    <string name="ruta_sistema_opcion">¿Quieres usar el sistema de rutas nativo de GoNow o Google Maps?</string>
    <string name="no_hay_banios">No se han encontrado baños</string>
    <string name="ha_llegado">Ha llegado.</string>
    <string name="recalculando_ruta">Recalculando ruta</string>
    <string name="erropuntuacionbanios">Error al cargar puntuación del baño</string>
    <string name="errorverificar">Error al verificar la calificación</string>
    <string name="error_eliminar_cuenta">Error al eliminar la cuenta.</string>
    <string name="error_credenciales">Error credenciales incorrectas</string>
    <string name="error_obtener_ubicacion">Error al obtener ubicación</string>
    <string name="error_cargar_banios">Error al cargar baños</string>
    <string name="error_obtener_datos">Error al obtener datos</string>
    <string name="error_al_publicar">Error al publicar</string>
    <string name="error_nombre_vacio">Añade un nombre</string>
    <string name="error_puntuacion_minima">La puntuación debe ser mayor a 0</string>
    <string name="error_falta_horario">Añade un horario</string>
    <string name="error_falta_tipo_ubicacion">Añade un tipo de ubicación</string>
    <string name="error_obtener_urinarios_creados">Error al obtener los urinarios creados</string>
    <string name="error_obtener_califi">Error al obtener las calificaciones</string>
    <string name="error_actualizarbanio">Error al actualizar</string>
    <string name="error_correo_no_registrado">Error correo no registrado</string>
    <string name="error_enviar_correo">Error al enviar el correo</string>
    <string name="error_correo_existe">Error el correo ya existe o la contraseña no cumple con los requisitos</string>
    <string name="error_ubicacion_no_obtenida">Error al obtener la ubicación</string>
    <string name="dominio_no_permitido">Dominio de correo no permitido</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="verifique_correo">Verifique su correo por favor</string>
    <string name="cargando">Cargando...</string>
    <string name="cargandobanios">Cargando baños...</string>
    <string name="cargandobanio">Cargando baño...</string>
    <string name="cargandocalificaciones">Cargando calificacion...</string>
    <string name="subiendocalificacion">Subiendo calificacion...</string>
    <string name="cargandoNombreCalle">Cargando nombre de la calle...</string>
    <string name="publicando">Publicando...</string>
    <string name="actualizando">Actualizando...</string>
    <string name="borrando">Borrando...</string>
    <string name="etiqueta_01">Accesible</string>
    <string name="etiqueta_10">No accesible</string>
    <string name="etiqueta_02">Unisex</string>
    <string name="etiqueta_20">No unisex</string>
    <string name="etiqueta_03">Con jabón</string>
    <string name="etiqueta_30">Sin jabón</string>
    <string name="etiqueta_04">Con papel</string>
    <string name="etiqueta_40">Sin papel</string>
    <string name="etiqueta_05">Gratis</string>
    <string name="etiqueta_50">De pago</string>
    <string name="etiqueta_06">Con zona bebé</string>
    <string name="etiqueta_60">Sin zona bebé</string>
    <string name="toast_accesibilidad">Baño para discapacitados</string>
    <string name="toast_jabon">Baño con jabón</string>
    <string name="toast_papel">Baño con papel</string>
    <string name="toast_bebe">Baño con zona de bebé</string>
    <string name="tipo_01">Baño público</string>
    <string name="tipo_02">Bar</string>
    <string name="tipo_03">Tienda</string>
    <string name="elegir_tipo_de_ubicaci_n">Elegir ubicación</string>
    <string name="ba_o_publico">Baño público</string>
    <string name="reg_strate_en_segundos_para_n_a_adir_nuevos_ba_os_n_calificar_y_dejar_rese_as_n_n_nete_y_mejora_la_experiencia_para_todos">Regístrate en segundos para:\n✅ Añadir nuevos baños 🏛️\n✅ Calificar y dejar reseñas ⭐\n\n¡Únete y mejora la experiencia para todos! 🙌</string>
</resources>