<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tituloFiltros"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/filtros"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewPuntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginBottom="10dp"
        android:text="@string/puntuaci_n"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="16sp" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Switch
        android:id="@+id/switchDiscapacitados"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/discapacitados"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/switchUnisex"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/unisex"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/switchGratis"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/gratis"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/botonUbicacion"
        style="@style/SecondaryButton"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinslight"
        android:text="@string/elegir_tipo_de_ubicaci_n"
        android:textColor="@color/oscuro"
        android:textSize="16sp" />


    <Button
        android:id="@+id/buttonBorrarFiltros"
        style="@style/SecondaryButton"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/oscuro"
        android:fontFamily="@font/poppinslight"
        android:text="@string/borrar_filtros"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonGuardarFiltros"
        style="@style/PrimaryButton"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:textColor="@color/oscuro"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/guardar"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />




</LinearLayout>