<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textShare"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/elige_el_tipo_de_ubicaci_n"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <RadioButton
            android:id="@+id/radioButtonBanioPublico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/ba_o_publico"
            android:textColor="@color/contraste"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/bar"
            android:textColor="@color/contraste"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonTienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/tienda"
            android:textColor="@color/contraste"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/restaurante"
            android:textColor="@color/contraste"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonGasolinera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/gasolinera"
            android:textColor="@color/contraste"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonOtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/otro"
            android:textColor="@color/contraste"
            android:textSize="16sp" />


    </RadioGroup>

    <Button
        android:id="@+id/buttonGuardar"
        style="@style/PrimaryButton"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:textColor="@color/oscuro"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/guardar"
        android:textSize="16sp" />

</LinearLayout>