<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="181dp"
        android:textSize="24sp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/crear_cuenta"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Correo"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/forma_entrada_texto"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/correo"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="@color/supportVariant"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/Contraseña"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/forma_entrada_texto"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textSize="24dp"
        android:textColor="#000000"
        android:textColorHint="@color/supportVariant"
        app:layout_constraintEnd_toEndOf="@+id/Correo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Correo"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/forma_entrada_texto"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/repite_la_contrasena"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/supportVariant"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/Correo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Correo"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />

    <Button
        android:id="@+id/buttonRegistrarme"
        style="@style/PrimaryButton"
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/registrarme"
        android:textColor="@color/general"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/contraseña"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/contraseña"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinslight"
        android:text="@string/ya_tienes_cuenta"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrarme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarme"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarme" />

    <TextView
        android:id="@+id/textViewIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inicia_sesión"
        android:textSize="16dp"
        android:textColor="@color/secondary"
        android:fontFamily="@font/poppinslight"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrarme"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarme"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarme" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrarme"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarme"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarme"
        app:srcCompat="@drawable/googlelogo" />


</androidx.constraintlayout.widget.ConstraintLayout>