<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/correo_de_recuperacion"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Correo"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/forma_entrada_texto"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="@color/supportVariant"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonEnviar"
        style="@style/PrimaryButton"
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/enviar"
        android:textColor="@color/oscuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Correo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Correo"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />

    <Button
        android:id="@+id/buttonVolver"
        style="@style/SecondaryButton"
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/volver"
        android:textColor="@color/oscuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonEnviar"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/buttonEnviar"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnviar" />


</androidx.constraintlayout.widget.ConstraintLayout>